--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@prisma/client": "^3.12.0",
     "@types/node": "^17.0.23",
+    "@types/react": "^17.0.43",
+    "axios": "^0.26.1",
     "next": "12.1.4",
     "react": "18.0.0",
     "react-dom": "18.0.0",
