--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "12.1.4",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-modal": "^3.14.4",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
   },
