--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-modal": "^3.14.4",
+    "react-toastify": "^8.2.0",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
   },
